[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/textures/items/iron_sword.png" type="Texture" id=1]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://efx/rotate_continuous.gd" type="Script" id=3]
[ext_resource path="res://efx/resources/spotlight_8.png" type="Texture" id=4]
[ext_resource path="res://ui/scenes/skill_item.gd" type="Script" id=5]
[ext_resource path="res://skills/skill_icon/skill_icon_inactive.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.294118, 0.294118, 0.294118, 1 )
font_data = ExtResource( 2 )

[node name="SkillItem" type="Control"]
self_modulate = Color( 0.941176, 0.921569, 0.921569, 0.541176 )
margin_right = 21.0
margin_bottom = 22.0
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VFX" type="Sprite" parent="."]
visible = false
modulate = Color( 0.501961, 0, 1, 1 )
material = SubResource( 2 )
position = Vector2( 9, 9 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InactiveSkillColor" type="Panel" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 22.0
rect_scale = Vector2( 1, -1 )
rect_pivot_offset = Vector2( 0, 10 )
rect_clip_content = true
input_pass_on_modal_close_click = false
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InactiveSkillColor2" type="TextureRect" parent="InactiveSkillColor"]
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 10 )
rect_clip_content = true
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldown" type="Label" parent="."]
visible = false
margin_left = 10.375
margin_top = 8.875
margin_right = 26.375
margin_bottom = 22.875
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="SkillLockTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="SkillLockTimer" to="." method="_on_SkillLockTimer_timeout"]
